--- a/IntegrationTests/build.gradle
+++ b/IntegrationTests/build.gradle
@@ -6,24 +6,25 @@ plugins {
 dependencies {
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
     implementation 'com.amazonaws:aws-lambda-java-events:3.11.0'
-    testImplementation group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.12.23'
-    implementation 'com.amazonaws:aws-lambda-java-runtime-interface-client:2.0.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.15'
-    implementation group: 'com.opencsv', name: 'opencsv', version: '5.5'
-    runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2:1.4.0'
+    implementation 'org.realityforge.javax.annotation:javax.annotation:1.0.1'
+    testImplementation group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.12.167'
+    implementation 'com.amazonaws:aws-lambda-java-runtime-interface-client:2.1.0'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.167'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.6'
+    runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2:1.5.1'
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.13.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.13.0'
-    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl:2.13.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.0'
+    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl:2.17.0'
 
-    testImplementation 'commons-lang:commons-lang:2.6'
-    testImplementation 'org.apache.commons:commons-lang3:3.+'
-    testImplementation 'com.google.guava:guava:20.+'
-    testImplementation 'commons-io:commons-io:2.5'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+    testImplementation 'commons-lang:commons-lang:20030203.000129'
+    testImplementation 'org.apache.commons:commons-lang3:3.12.0'
+    testImplementation 'com.google.guava:guava:31.0.1-jre'
+    testImplementation 'commons-io:commons-io:20030203.000550'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.reflections:reflections:0.10.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.mockito:mockito-inline:4.3.1'
     testImplementation 'org.mockito:mockito-core:4.3.1'
     testImplementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
@@ -71,6 +72,10 @@ def wflowToTestsMap = [
                 'com.kenzie.unit.two.DepartmentServiceTest',
         ],
 ]
+
+repositories {
+    mavenCentral()
+}
 
 wflowToTestsMap.forEach { wflowName, testList ->
     tasks.register(wflowName) {
