--- a/buildScripts/testspec.yml
+++ b/buildScripts/testspec.yml
@@ -10,3 +10,8 @@ reports:
     files:
       - 'Application/build/test-results/test/*.xml'
     file-format: "JUNITXML"
+  jacoco-report:
+    files:
+      - 'Application/build/reports/jacoco/test/jacocoTestReport.xml'
+    file-format: 'JACOCOXML'
+
