--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     testImplementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'commons-io:commons-io:20030203.000550'
     testImplementation 'org.reflections:reflections:0.10.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.mockito:mockito-inline:4.3.1'
     testImplementation 'org.mockito:mockito-core:4.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
