--- a/IntegrationTests/build.gradle
+++ b/IntegrationTests/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testImplementation 'commons-io:commons-io:20030203.000550'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.reflections:reflections:0.10.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.mockito:mockito-inline:4.3.1'
     testImplementation 'org.mockito:mockito-core:4.3.1'
     testImplementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
